<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_light_background"
        tools:context=".LoginActivity">
    <TextView
            android:text="@string/bienvenido_al_si_uag"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/mensajeBienvenida"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="96dp" android:layout_marginStart="16dp"/>

    <TextView
            android:text="@string/por_favor_ingrese_sus_credenciales"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/mensajeCredenciales"
            app:layout_constraintStart_toStartOf="@+id/mensajeBienvenida" android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/mensajeBienvenida"/>
    <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" android:layout_alignParentTop="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="42dp" app:layout_constraintTop_toBottomOf="@+id/mensajeCredenciales"
            app:layout_constraintEnd_toEndOf="parent" android:minHeight="48dp" android:autofillHints=""/>
    <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" android:layout_alignParentTop="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/editTextEmail"
            app:layout_constraintEnd_toEndOf="parent" android:minHeight="48dp" android:autofillHints=""/>
    <Button
            android:id="@+id/buttonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login" android:layout_alignParentTop="true"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="80dp" app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent" android:textColor="#000000"/>
    <TextView
            android:text="@string/olvidaste_tu_contrase_a"
            android:textColor="#757575"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/mensajeOlvidoContrasena"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin" app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>